[tool.poetry]
name = "private-diary.net"
version = "1.0.0"
description = ""
authors = ["Leo Parkes-Neptune <43960199+thesammy2010@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pip = "^22.3.1"
selenium = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
